--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+Dockerfile
 
 # Translations
 *.mo
@@ -116,6 +117,7 @@ venv.bak/
 # Spyder project settings
 .spyderproject
 .spyproject
+**/.vscode/
 
 # Rope project settings
 .ropeproject
@@ -136,4 +138,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-Dockerfile
